--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -780,35 +780,35 @@ Resources:
                           {
                             "file_path": "/var/log/cloud-init.log",
                             "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PSMSSHMachine/cloud-init",
+                            "log_stream_name": "PSMPMachine/cloud-init",
                             "timezone": "Local",
                             "timestamp_format": "%Y-%m-%dT%H:%M:%S"
                           },
                           {
                             "file_path": "/var/log/cloud-init-output.log",
                             "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PSMSSHMachine/cloud-init-output",
+                            "log_stream_name": "PSMPMachine/cloud-init-output",
                             "timezone": "Local",
                             "timestamp_format": "%Y-%m-%dT%H:%M:%S"
                           },
                           {
                             "file_path": "/var/log/cfn-init.log",
                             "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PSMSSHMachine/cfn-init",
+                            "log_stream_name": "PSMPMachine/cfn-init",
                             "timezone": "Local",
                             "timestamp_format": "%Y-%m-%dT%H:%M:%S"
                           },
                           {
                             "file_path": "/tmp/temp/EnvManager.log",
                             "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PSMSSHMachine/EnvManager",
+                            "log_stream_name": "PSMPMachine/EnvManager",
                             "timezone": "Local",
                             "timestamp_format": "%Y-%m-%dT%H:%M:%S"
                           },
                           {
                             "file_path": "/var/opt/CARKpsmp/temp/PSMPHardening_log.txt",
                             "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PSMSSHMachine/PSMPHardening_log",
+                            "log_stream_name": "PSMPMachine/PSMPHardening_log",
                             "timezone": "Local",
                             "timestamp_format": "%Y-%m-%dT%H:%M:%S"
                           }
