--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -124,7 +124,7 @@ Resources:
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
-    Condition: CustomImageEmpty
+    Condition: VaultCustomImageEmpty
   PVWAAmi:
     Type: Custom::FindAMI
     Properties:
@@ -135,6 +135,7 @@ Resources:
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: PVWACustomImageEmpty
   CPMAmi:
     Type: Custom::FindAMI
     Properties:
@@ -145,6 +146,7 @@ Resources:
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: CPMCustomImageEmpty
   PSMAmi:
     Type: Custom::FindAMI
     Properties:
@@ -155,6 +157,7 @@ Resources:
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: PSMCustomImageEmpty
   PSMPAmi:
     Type: Custom::FindAMI
     Properties:
@@ -165,6 +168,7 @@ Resources:
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: PSMPCustomImageEmpty
   StoreMasterPassword:
     Type: 'AWS::CloudFormation::CustomResource'
     Version: '1.0'
@@ -818,7 +822,7 @@ Resources:
       SubnetId: !Ref 'VaultInstanceSubnetId'
       ImageId: 
         Fn::If:
-          - CustomImageEmpty
+          - VaultCustomImageEmpty
           - !Ref VaultAmi
           - !Ref VaultCustomAmi
       InstanceType: !Ref 'VaultInstanceType'
@@ -908,7 +912,7 @@ Resources:
       SubnetId: !Ref 'DRInstanceSubnetId'
       ImageId: 
         Fn::If:
-          - CustomImageEmpty
+          - VaultCustomImageEmpty
           - !Ref VaultAmi
           - !Ref VaultCustomAmi
       InstanceType: !Ref 'VaultInstanceType'
@@ -975,7 +979,11 @@ Resources:
           Value: !Ref PVWAInstanceName
       SecurityGroupIds: !Ref PVWAInstanceSecurityGroups
       SubnetId: !Ref PVWAInstanceSubnetId
-      ImageId: !Ref PVWAAmi
+      ImageId: 
+        Fn::If:
+          - PVWACustomImageEmpty
+          - !Ref PVWAAmi
+          - !Ref PVWACustomAmi
       InstanceType: !Ref PVWAInstanceType
       UserData: !Base64
         'Fn::Sub': >-
@@ -1068,7 +1076,11 @@ Resources:
           Value: !Ref CPMInstanceName
       SecurityGroupIds: !Ref CPMInstanceSecurityGroups
       SubnetId: !Ref CPMInstanceSubnetId
-      ImageId: !Ref CPMAmi
+      ImageId: 
+        Fn::If:
+          - CPMCustomImageEmpty
+          - !Ref CPMAmi
+          - !Ref CPMCustomAmi
       InstanceType: !Ref CPMInstanceType
       UserData: !Base64
         'Fn::Sub': >-
@@ -1153,7 +1165,11 @@ Resources:
           Value: !Ref PSMInstanceName
       SecurityGroupIds: !Ref PSMInstanceSecurityGroups
       SubnetId: !Ref PSMInstanceSubnetId
-      ImageId: !Ref PSMAmi
+      ImageId: 
+        Fn::If:
+          - PSMCustomImageEmpty
+          - !Ref PSMAmi
+          - !Ref PSMCustomAmi
       InstanceType: !Ref PSMInstanceType
       UserData: !Base64
         'Fn::Sub': >-
@@ -1228,7 +1244,11 @@ Resources:
           Value: !Ref PSMPInstanceName
       SecurityGroupIds: !Ref PSMPInstanceSecurityGroups
       SubnetId: !Ref PSMPInstanceSubnetId
-      ImageId: !Ref PSMPAmi
+      ImageId: 
+        Fn::If:
+          - PSMPCustomImageEmpty
+          - !Ref PSMPAmi
+          - !Ref PSMPCustomAmi
       InstanceType: !Ref PSMPInstanceType
       UserData: !Base64
         'Fn::Sub': >
@@ -1345,11 +1365,6 @@ Parameters:
       - Win2016
       - Win2019
     Default: Win2016
-  VaultCustomAmi:
-    Type: String
-    Description: Enter the Vault Image ID, if you wish to use a custom Vault image.
-    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
-    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   CyberarkAccountId:
     Type: String
     Description: Enter the CyberArk Account ID (AMI Owner account ID).
@@ -1370,6 +1385,11 @@ Parameters:
     Type: String
     Description: Enter the path of the recovery public key file within the bucket.
     Default: recpub.key
+  VaultCustomAmi:
+    Type: String
+    Description: Enter the Vault Image ID, if you wish to use a custom Vault image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   VaultInstanceName:
     Type: String
     Description: Enter a name for the Vault instance.
@@ -1446,6 +1466,11 @@ Parameters:
   DRInstanceSubnetId:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the DR Vault instance will reside.
+  CPMCustomAmi:
+    Type: String
+    Description: Enter the CPM Image ID, if you wish to use a custom CPM image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   CPMInstanceName:
     Type: String
     Description: Enter a name for the CPM instance.
@@ -1465,6 +1490,11 @@ Parameters:
   CPMInstanceSubnetId:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the CPM instance will reside.
+  PVWACustomAmi:
+    Type: String
+    Description: Enter the PVWA Image ID, if you wish to use a custom PVWA image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   PVWAInstanceName:
     Type: String
     Description: Enter a name for the PVWA instance.
@@ -1487,6 +1517,11 @@ Parameters:
   PVWAHostName:
     Type: String
     Description: IP or FQDN of PVWA server
+  PSMCustomAmi:
+    Type: String
+    Description: Enter the PSM Image ID, if you wish to use a custom PSM image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   PSMInstanceName:
     Type: String
     Description: Enter a name for the PSM instance.
@@ -1505,6 +1540,11 @@ Parameters:
   PSMInstanceSubnetId:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the PSM instance will reside.
+  PSMPCustomAmi:
+    Type: String
+    Description: Enter the PSMP Image ID, if you wish to use a custom PSMP image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   PSMPInstanceName:
     Type: String
     Description: Enter a name for the PSMP instance.
@@ -1557,7 +1597,6 @@ Metadata:
         Parameters:
           - EULA
           - WinVersion
-          - VaultCustomAmi
           - CyberarkAccountId
           - KeyName
           - VaultFilesBucket
@@ -1566,6 +1605,7 @@ Metadata:
       - Label:
           default: Primary Vault and DR Vault configuration
         Parameters:
+          - VaultCustomAmi
           - VaultInstanceName
           - VaultAdminPassword
           - RetypeAdminPassword
@@ -1582,6 +1622,7 @@ Metadata:
       - Label:
           default: CPM configuration
         Parameters:
+          - CPMCustomAmi
           - CPMInstanceName
           - CPMInstanceType
           - CPMInstanceSecurityGroups
@@ -1589,6 +1630,7 @@ Metadata:
       - Label:
           default: PVWA configuration
         Parameters:
+          - PVWACustomAmi
           - PVWAInstanceName
           - PVWAInstanceType
           - PVWAInstanceSecurityGroups
@@ -1597,6 +1639,7 @@ Metadata:
       - Label:
           default: PSM configuration
         Parameters:
+          - PSMCustomAmi
           - PSMInstanceName
           - PSMInstanceType
           - PSMInstanceSecurityGroups
@@ -1604,6 +1647,7 @@ Metadata:
       - Label:
           default: PSMP configuration
         Parameters:
+          - PSMPCustomAmi
           - PSMPInstanceName
           - PSMPInstanceType
           - PSMPInstanceSecurityGroups
@@ -1613,8 +1657,6 @@ Metadata:
         default: License Agreement
       WinVersion:
         default: Windows Server Version
-      VaultCustomAmi:
-        default: Custom Vault Image ID (Optional)
       CyberarkAccountId:
         default: CyberArk Account ID
       KeyName:
@@ -1625,6 +1667,8 @@ Metadata:
         default: Vault License File
       RecoveryPublicKey:
         default: Recovery Public Key
+      VaultCustomAmi:
+        default: Custom Vault Image ID (Optional)
       VaultInstanceName:
         default: Vault Instance Name
       VaultAdminPassword:
@@ -1651,6 +1695,8 @@ Metadata:
         default: Primary Vault Instance Subnet Id
       DRInstanceSubnetId:
         default: Vault DR Instance Subnet Id
+      CPMCustomAmi:
+        default: Custom CPM Image ID (Optional)
       CPMInstanceName:
         default: CPM Instance Name
       CPMInstanceType:
@@ -1659,6 +1705,8 @@ Metadata:
         default: CPM Instance Security Groups
       CPMInstanceSubnetId:
         default: CPM Instance Subnet Id
+      PVWACustomAmi:
+        default: Custom PVWA Image ID (Optional)
       PVWAInstanceName:
         default: PVWA Instance Name
       PVWAInstanceType:
@@ -1669,6 +1717,8 @@ Metadata:
         default: PVWA Instance Subnet Id
       PVWAHostName:
         default: PVWA FQDN (Optional)
+      PSMCustomAmi:
+        default: Custom PSM Image ID (Optional)
       PSMInstanceName:
         default: PSM Instance Name
       PSMInstanceType:
@@ -1677,6 +1727,8 @@ Metadata:
         default: PSM Instance Security Groups
       PSMInstanceSubnetId:
         default: PSM Instance Subnet Id
+      PSMPCustomAmi:
+        default: Custom PSMP Image ID (Optional)
       PSMPInstanceName:
         default: PSMP Instance Name
       PSMPInstanceType:
@@ -1692,9 +1744,21 @@ Conditions:
   PVWAHostNameEmpty: !Equals
     - ''
     - !Ref PVWAHostName
-  CustomImageEmpty: !Equals
+  VaultCustomImageEmpty: !Equals
     - ''
     - !Ref VaultCustomAmi
+  PVWACustomImageEmpty: !Equals
+    - ''
+    - !Ref PVWACustomAmi
+  CPMCustomImageEmpty: !Equals
+    - ''
+    - !Ref CPMCustomAmi
+  PSMCustomImageEmpty: !Equals
+    - ''
+    - !Ref PSMCustomAmi
+  PSMPCustomImageEmpty: !Equals
+    - ''
+    - !Ref PSMPCustomAmi
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
