--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -38,6 +38,7 @@ Resources:
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: CustomImageEmpty
   StoreDRPassword:
     Type: AWS::CloudFormation::CustomResource
     Properties:
@@ -450,7 +451,11 @@ Resources:
             VolumeSize: 30
             Encrypted: true
       SubnetId: !Ref 'DRInstanceSubnetId'
-      ImageId: !Ref VaultAmi
+      ImageId: 
+        Fn::If:
+          - CustomImageEmpty
+          - !Ref VaultAmi
+          - !Ref VaultCustomAmi
       InstanceType: !Ref 'VaultInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -523,6 +528,11 @@ Parameters:
       - Win2016
       - Win2019
     Default: Win2016
+  VaultCustomAmi:
+    Type: String
+    Description: Enter the Vault Image ID, if you wish to use a custom Vault image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   CyberarkAccountId:
     Type: String
     Description: Enter the CyberArk Account ID (AMI Owner account ID).
@@ -593,6 +603,7 @@ Metadata:
         Parameters:
           - EULA
           - WinVersion
+          - VaultCustomAmi
           - CyberarkAccountId
           - KeyName
       - Label:
@@ -614,6 +625,8 @@ Metadata:
         default: License Agreement
       WinVersion:
         defualt: Windows Server Version
+      VaultCustomAmi:
+        default: Custom Vault Image ID (Optional)
       CyberarkAccountId:
         default: CyberArk Account ID
       KeyName:
@@ -634,6 +647,10 @@ Metadata:
         default: DR Vault Instance Subnet Id
       Secret:
         default: DR User Secret
+Conditions:
+  CustomImageEmpty: !Equals
+    - ''
+    - !Ref VaultCustomAmi
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
